# python_project_template

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: main-workflow.yml  makefile.yml
.gitlab/: configure_runner.sh  configure_runner_for_publish.sh
app/: __main__.py
app/config/: __init__.py  default.py  utils.py
app/database/: __init__.py
app/database/connection/: __init__.py  session.py
app/database/migrator/: __main__.py  env.py
app/database/migrator/versions/: 2022-09-08_8bb82a9d9164_template.py
app/database/models/: __init__.py  base.py  user.py
app/database/proxy/: __init__.py  base.py  user.py
app/database/schemas/: __init__.py  user.py
config/: __init__.py  config.py
database/: __init__.py  models.py  proxy.py  schemas.py
deploy/: README.md  generate.sh
tests/: conftest.py  static.py  utils.py
tests/database/: __init__.py  config.py  test_proxy.py
tests/test_migrations/: test_stairway.py
